--- a/app/templates/app/finanzas/cajas/detalleCajas.html
+++ b/app/templates/app/finanzas/cajas/detalleCajas.html
@@ -38,7 +38,7 @@
           <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexGestionCajaFinanzas' %}">
             Volver
           </a>
-          <a class="btn btn-danger d-flex ml-auto" href="{% url 'cuadrarCajasFinanzas' c.0 %}" type="submit">Cerrar Caja O Cuadrar ?</a>
+          <a class="btn btn-danger d-flex ml-auto" href="{% url 'cuadrarCajasFinanzas' c.0 %}" type="submit">Cerrar Caja</a>
         </div>  
       </div>
       {% endfor %}
