--- a/app/templates/app/caja/pago-efectivo/indexPagoEfectivo.html
+++ b/app/templates/app/caja/pago-efectivo/indexPagoEfectivo.html
@@ -29,7 +29,7 @@
         <td>{{m.1}}</td>
         <td>{{m.2}}</td>
         <td class="p-1">
-          <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Ver Detalle</i></a>
+          <a href="{% url 'detalleMesasCajas' m.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit">Ver Detalle</i></a>
         </td>
       </tr>
       {% endfor %}
