--- a/app/templates/app/administrador/menus/indexMenusProductos.html
+++ b/app/templates/app/administrador/menus/indexMenusProductos.html
@@ -9,7 +9,7 @@
   <h2>Detalle Menu</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroMenusProductos' id %}" style="color: white; text-decoration: none;">Agregar Detalle</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroMenusProductos' id %}" style="color: white; text-decoration: none;">Agregar Plato</a></button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
