--- a/app/templates/app/administrador/menus/registroMenusProductos.html
+++ b/app/templates/app/administrador/menus/registroMenusProductos.html
@@ -10,7 +10,7 @@
     <!-- /.content-wrapper -->
     
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-      <h2>Registro de Menu</h2>
+      <h2>Agregar Plato al Menu</h2>
       <hr>
       <form action="/crear-menus-productos/" method="GET">
         <div class="col mt-4">
