--- a/app/templates/app/administrador/usuarios/registroUser.html
+++ b/app/templates/app/administrador/usuarios/registroUser.html
@@ -88,11 +88,9 @@
         {{ form | crispy }}
         <div class="col">
           <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexUser' %}" 
-              style="color: white;"
-              >Ir al inicio</a>
-            </button>
+              <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexUser' %}" >
+                Ir al inicio
+              </a>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Registrar</button>
           </div>
         </div>
