--- a/app/templates/app/administrador/pedidos-proveedor/detallePedidosProveedor.html
+++ b/app/templates/app/administrador/pedidos-proveedor/detallePedidosProveedor.html
@@ -34,6 +34,10 @@
             </div>
         </div>
         <hr>
+        {% empty %}
+        <div class="alert alert-info mb-5 mt-5" role="alert">
+            Pedido sin insumos creados.
+        </div>
         {% endfor %}
         <div class="col mt-4">
             <div class="row">
@@ -41,6 +45,7 @@
                     Volver
                 </a>
 
+                {% if DetallePedidos.0.1 %}
                 <form action="/autorizar-pedido/" method="GET">
                     <input type="hidden" name="p_id_pedido" value="{{DetallePedidos.0.1}}">
                     <input type="hidden" name="p_opcion1" value="1">
@@ -54,6 +59,7 @@
                     <input type="hidden" name="p_opcion2" value="1">
                     <button class="btn btn-danger d-flex ml-auto" type="submit">Rechazar Pedido</button>
                 </form>
+                {% endif %}
             </div>  
         </div>
     </div>
