--- a/app/templates/app/administrador/proveedores/registroProveedores.html
+++ b/app/templates/app/administrador/proveedores/registroProveedores.html
@@ -77,11 +77,9 @@
         </div>
         <div class="col mt-4">
           <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexProveedores' %}" 
-              style="color: white;"
-              >Volver</a>
-            </button>
+            <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexProveedores' %}">
+              Volver
+            </a>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
 
           </div>  
