--- a/app/templates/app/bodega/stock-productos/indexStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/indexStockProductos.html
@@ -32,11 +32,11 @@
         <!-- <th scope="row">{{ u.id }}</th> -->
         <td>{{sp.2}}</td>
         <td>{{sp.3}}</td>
-        <td>{{sp.6}}</td>
-        <td>{{sp.8}}</td>
+        <td>{{sp.5}}</td>
+        <td>{{sp.7}}</td>
         <td class="p-1">
           <a href="{% url 'modificarStockProductos' sp.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Detalle</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
+          <!-- <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a> -->
         </td>
       </tr>
       {% endfor %}
