--- a/app/templates/app/administrador/productos/editarProductos.html
+++ b/app/templates/app/administrador/productos/editarProductos.html
@@ -26,12 +26,11 @@
               <label for="p_precio">Precio:</label>
               <input type="number" name="p_precio" id="" class="form-control" value="{{p.2}}" required>
             </div>
-            {% endfor %}
             <div class="form-group col-md-6">
               <label for="p_id_cat">Categoria:</label>
               <select name="p_id_cat" id="" class="form-control">
                 {% for c in Categorias %}
-                  <option value="{{c.0}}">{{c.1}}</option>
+                <option value="{{c.0}}">{{c.1}}</option>
                 {% endfor %}
               </select>
             </div>
@@ -39,7 +38,7 @@
               <label for="p_id_tipo">Tipo:</label>
               <select name="p_id_tipo" id="" class="form-control">
                 {% for t in TipoProductos %}
-                  <option value="{{t.0}}">{{t.1}}</option>
+                <option value="{{t.0}}">{{t.1}}</option>
                 {% endfor %}
               </select>
             </div>
@@ -47,13 +46,18 @@
               <label for="p_id_receta">Receta:</label>
               <select name="p_id_receta" id="" class="form-control">
                 {% for r in Recetas %}
-                  <option value="{{r.0}}">{{r.1}}</option>
+                <option value="{{r.0}}">{{r.1}}</option>
                 {% endfor %}
               </select>
             </div>
+            <div class="form-group col-md-6">
+              <label for="link_imagen">Link Imagen:</label>
+              <input type="url" name="link_imagen" id="" class="form-control" value="{{p.9}}" required>
+            </div>
           </div>
+          {% endfor %}
         </div>
-
+        
         <div class="col mt-4">
           <div class="row">
             <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexProductos' %}"> 
