--- a/app/templates/app/administrador/productos/indexProductos.html
+++ b/app/templates/app/administrador/productos/indexProductos.html
@@ -19,6 +19,7 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
+        <th scope="col">Imagen</th>
         <th scope="col">Nombre</th>
         <th scope="col">Precio</th>
         <th scope="col">Categoria</th>
@@ -31,6 +32,9 @@
       {% for p in Productos %}
       <tr>
         <!-- <th scope="row">{{ u.id }}</th> -->
+        <td>
+          <img src="{{p.9}}" alt="" height="85px" width="100px">
+        </td>
         <td>{{p.1}}</td>
         <td>${{p.2}}</td>
         <td>{{p.4}}</td>
