--- a/app/templates/app/administrador/productos/registroProductos.html
+++ b/app/templates/app/administrador/productos/registroProductos.html
@@ -47,6 +47,10 @@
                 {% endfor %}
               </select>
             </div>
+            <div class="form-group col-md-6">
+              <label for="link_imagen">Link Imagen:</label>
+              <input type="url" name="link_imagen" id="" class="form-control" required>
+            </div>
           </div>
         </div>
 
