--- a/app/templates/app/administrador/proveedores/editarProveedores.html
+++ b/app/templates/app/administrador/proveedores/editarProveedores.html
@@ -79,19 +79,15 @@
         <div class="col">
           <div class="row">
             <div class="form-group d-none" >
-              <input type="hidden" name="p_id" class="form-control" value="{{Proveedor.0.18}}"/>
+              <input type="hidden" name="p_id" class="form-control" value="{{Proveedor.0.16}}"/>
             </div>
             <div class="form-group col-md-6">
               <label for="p_rut">Rut:</label>
               <input type="text" name="p_rut" class="form-control" value="{{Proveedor.0.1}}" required readonly>
             </div>
             <div class="form-group col-md-6">
-              <label for="p_dv" >DV:</label>
-              <input type="text" name="p_dv" id="" class="form-control" value="{{Proveedor.0.2}}" required readonly>
-            </div>
-            <div class="form-group col-md-6">
               <label for="p_razon_social" >Razon Social:</label>
-              <input type="text" name="p_razon_social" id="" class="form-control" value="{{Proveedor.0.3}}" required>
+              <input type="text" name="p_razon_social" id="" class="form-control" value="{{Proveedor.0.2}}" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_nom_corto" >Nombre:</label>
@@ -99,11 +95,11 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_telefono" >Telefono:</label>
-              <input type="text" name="p_telefono" id="" class="form-control" value="{{Proveedor.0.4}}" required>
+              <input type="number" name="p_telefono" id="" class="form-control" value="{{Proveedor.0.3}}" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_correo" >Correo:</label>
-              <input type="email" name="p_correo" id="" class="form-control" value="{{Proveedor.0.5}}" required>
+              <input type="email" name="p_correo" id="" class="form-control" value="{{Proveedor.0.4}}" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_id_giro">Giro</label>
@@ -119,15 +115,15 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_direccion">Dirección</label>
-              <input type="text" name="p_direccion" id="" value="{{ Proveedor.0.11 }}" class="form-control" required>
+              <input type="text" name="p_direccion" id="" value="{{ Proveedor.0.9 }}" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_num_dir">N° Dirección</label>
-              <input type="text" name="p_num_dir" id="" value="{{ Proveedor.0.12 }}" class="form-control" required>
+              <input type="number" name="p_num_dir" id="" value="{{ Proveedor.0.11 }}" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_nro_casa">N° Casa</label>
-              <input type="text" name="p_nro_casa" id="" value="{{ Proveedor.0.13 }}" class="form-control" required>
+              <input type="number" name="p_nro_casa" id="" value="{{ Proveedor.0.12 }}" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_tipo_dir">Tipo Dirección</label>
