--- a/app/templates/app/administrador/proveedores/registroProveedores.html
+++ b/app/templates/app/administrador/proveedores/registroProveedores.html
@@ -15,11 +15,11 @@
           <div class="row">
             <div class="form-group col-md-6">
               <label for="p_rut">Rut:</label>
-              <input type="text" name="p_rut" class="form-control" required>
+              <input type="number" name="p_rut" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_dv" >DV:</label>
-              <input type="text" name="p_dv" id="" class="form-control" required>
+              <input type="number" name="p_dv" id="" min="0"  max="9" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_razon_social" >Razon Social:</label>
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_telefono" >Telefono:</label>
-              <input type="text" name="p_telefono" id="" class="form-control" required>
+              <input type="number" name="p_telefono" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_correo" >Correo:</label>
@@ -51,11 +51,11 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_num_dir">N° Dirección</label>
-              <input type="text" name="p_num_dir" id="" class="form-control" required>
+              <input type="number" name="p_num_dir" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_nro_casa">N° Casa</label>
-              <input type="text" name="p_nro_casa" id="" class="form-control" required>
+              <input type="number" name="p_nro_casa" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_tipo_dir">Tipo Dirección</label>
