--- a/app/templates/app/administrador/usuarios/listarRolesUsuario.html
+++ b/app/templates/app/administrador/usuarios/listarRolesUsuario.html
@@ -16,7 +16,7 @@
             <div class="form-group d-none">
               <input type="hidden" name="p_id_user" class="form-control" value="{{IdUser}}"/>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 d-none">
               <label for="p_user_name">Usuario</label>
               <input type="text" name="p_user_name" class="form-control" value="{{UserGroup.0.2}}" required readonly>
             </div>
