--- a/app/templates/app/cocina/tablero/indexTablero.html
+++ b/app/templates/app/cocina/tablero/indexTablero.html
@@ -18,7 +18,6 @@
   
     <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
         <th scope="col">Mesa</th>
         <th scope="col">Hora Inicio</th>
         <th scope="col">Estado</th>
@@ -29,22 +28,21 @@
       <tr>
         {% for oc in OrdenComanda %}
           <tr>
-            <td>{{oc.0}}</td>
             <td>{{oc.6}}</td>
             <td>{{oc.4}}</td>
             <td>
-              <select name="id_est_comanda" id="id_est_comanda">
+              <select class="form-control text-left" name="id_est_comanda" id="id_est_comanda">
                 {% for ec in EstadoComanda %}
-                  {% if ec.id == oc.id %}
-                    <option value="{{ec.0}}" selected>{{ec.1}}</option>
+                  {% if ec.0 == oc.0 %}
+                    <option id="{{oc.0}}" value="{{ec.0}}" selected>{{ec.1}}</option>
                   {% else %}
-                    <option value="{{ec.0}}">{{ec.1}}</option>
+                    <option id="{{oc.0}}" value="{{ec.0}}">{{ec.1}}</option>
                   {% endif %}
                 {% endfor %}
               </select>
             </td>
             <td class="p-1">
-              <a href="{% url 'indexMenusProductos' oc.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Detalle</i></a>
+              <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Detalle</i></a>
             </td>
           </tr>
         {% endfor %}
@@ -81,6 +79,39 @@
     window.onload = function() {
         setInterval(muestraReloj, 1000);
     }
+</script>
+
+<script>
+
+  $(document).ready(function(){
+    $("#id_est_comanda").change(function() {
+      let id_est_comanda = $(this).children("option:selected").val();
+      let id_comanda = $(this).children("option:selected").attr("id");
+      
+        swal.fire({
+        "title": "¿Estás seguro?",
+        "text": "¡Estás apunto de modificar el estado!",
+        "icon": "question",
+        "showCancelButton": true,
+        "cancelButtonText": "No, cancelar",
+        "confirmButtonText": "Si, Modificar",
+        "reverseButtons": true,
+        "confirmButtonColor": "#dc3545",
+        "cancelButtonColor": "#0069D9"
+        })
+        .then(function(result) {
+          if(result.isConfirmed) {
+            if (id_est_comanda == 2) {
+              window.location.href = "preparar-comanda/"+id_comanda+"/"
+            }
+            else if(id_est_comanda == 3) {
+              window.location.href = "entregar-pedido/"+id_comanda+"/"
+            }
+          }
+        })
+      
+    });
+  });
 </script>
 
 {% endblock %}
