[ADD] ingreso pago efectivo fix orden compra

--- a/app/templates/app/caja/pago-efectivo/detalleMesasCajas.html
+++ b/app/templates/app/caja/pago-efectivo/detalleMesasCajas.html
@@ -40,8 +40,7 @@
                 <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexPagoEfectivo' %}">
                     Volver
                 </a>
-                <button class="btn btn-success d-flex ml-auto mr-3" type="submit">Generar Boleta</button>
-                <a href="{% url 'ingresarPagoEfectivo' m.0 %}" class="btn btn-success d-flex">Ingresar Efectivo</a>
+                <a href="{% url 'ingresarPagoEfectivo' m.0 %}" class="btn btn-success d-flex">Ingresar Pago Efectivo</a>
             </div>  
         </div>
         {% endfor %}
