--- a/app/templates/app/administrador/pedidos-proveedor/generarOrdenCompra.html
+++ b/app/templates/app/administrador/pedidos-proveedor/generarOrdenCompra.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="p_vigencia">Vigencia (Dias):</label>
-                        <input name="p_vigencia" type="number" class="form-control">
+                        <input name="p_vigencia" type="number" max="99" class="form-control">
                     </div>
                 </div>
                 <div class="col mt-4">
