--- a/app/templates/app/cliente/pagoCliente.html
+++ b/app/templates/app/cliente/pagoCliente.html
@@ -12,6 +12,6 @@
 <br>
 <div class="d-flex justify-content-center">
     &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
-    <button type="button" class="btn btn-primary btn-lg">Continuar</button>
+    <!-- <button type="button" class="btn btn-primary btn-lg">Continuar</button> -->
 </div>
 {% endblock %}
