--- a/app/templates/app/cliente/clienteMenu.html
+++ b/app/templates/app/cliente/clienteMenu.html
@@ -4,78 +4,37 @@
 {% load static %}
 <br>
 <h2 class="titulo_menu">Nuestro Menú</h2>
-<div class="d-flex justify-content-center">
-    <div class="cartaMenu">
-        <img src="{% static 'img/Cazuela.jpg'%}" alt="Plato 1">
-        <div class="descripcion">
-            <!--<a href="#" class="Plato">Cazuela de hueso buco</a>-->
-            <a href="" class="text-dark font-weight-bold">Cazuela de hueso buco</a>
-            <br>
-            <span class="Precio"><span class="simbolo">$</span>8.000</span>
-        </div>
-    </div>
-    <div class="cartaMenu">
-        <img src="{% static 'img/raviolis.jpg'%}" alt="Plato 1">
-        <div class="descripcion">
-            <a href="" class="text-dark font-weight-bold">Ravioli rellenos de espinaca</a>
-            <br>
-            <span class="Precio"><span class="simbolo">$</span>5.000</span>
-        </div>
-    </div>
-    <div class="cartaMenu">
-        <img src="{% static 'img/curanto.jpg'%}" alt="Plato 1">
-        <div class="descripcion">
-            <a href="" class="text-dark font-weight-bold">Curanto con chapalele</a>
-            <br>
-            <span class="Precio"><span class="simbolo">$</span>10.000</span>
-        </div>
-    </div>
-    <div class="cartaMenu">
-        <img src="{% static 'img/Cazuela.jpg'%}" alt="Plato 1">
-        <div class="descripcion">
-            <a href="" class="text-dark font-weight-bold">Cazuela de hueso buco</a>
-            <br>
-            <span class="Precio"><span class="simbolo">$</span>8.000</span>
-        </div>
-    </div>
-</div>
 
+
+<div class="d-flex justify-content-center" type="button">
+    <form action="/detalle-orden/" method="GET">
+
+        {% for ltd in listarProducto %}
+        <div class="cartaMenu">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}">
+                <label class="form-check-label" for="inlineRadio1">{{ltd.1}} $ {{ltd.2}}</label>
+            </div>
+            <img src="{{ ltd.9 }}" alt="Plato 1">
+            <div class="descripcion">
+                <a href="" class="text-dark font-weight-bold"></a>
+                <br>
+                <span class="Precio"><span class="simbolo"></span></span>
+            </div>
+        </div>
+        {% endfor %}
+        <input type="hidden" name="p_cantidad" value="1" />
+        <input type="hidden" name="p_id_orden" id="p_id_orden"  value="{{id_orden}}">
+ 
+</div>
 <hr>
-<h2 class="titulo_pedido">Pedido</h2>
-
-<div class="listado">
-    <h5>DEMORA ESTIMADA: </h5>
-</div>
-<div>
-    <table id="table" class="table table-striped table-bordered" style="width: 100%;" data-toggle="table"
-        data-toolbar="#toolbar" data-search="true">
-
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Platos Agregados</th>
-                <th scope="col">Precio</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Ravioli rellenos de espinaca con salsa boloñesa </td>
-                <td>$ 14.990</td>
-            </tr>
-            <tr>
-                <td>Curanto con chapalele</td>
-                <td>$ 14.990</td>
-            </tr>
-        </tbody>
-    </table>
-    
-</div>
-
-
-</div>
+</tbody>
+<br>
 <div class="d-flex justify-content-center">
-    <button type="button" class="btn btn-primary btn-lg">Agregar Producto</button>
-    &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
-    <button type="button" class="btn btn-primary btn-lg">Finalizar Pedido</button>
-</div>
-{% endblock %}
 
+    <button type="submit" class="btn btn-primary btn-lg">Agregar Producto</button>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <a class="btn btn-primary btn-lg" type="submit" href="{% url 'listarDetalleOrden' id_orden %}">Finalizar Pedido</a>
+</div>
+</form>
+{% endblock %}
