--- a/app/templates/app/cliente/detalleReserva.html
+++ b/app/templates/app/cliente/detalleReserva.html
@@ -11,7 +11,7 @@
 
 
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'img/principal/restaurante.jpg' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'img/principal/Logo.png' %}" />
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
