--- a/staticfiles/css/menu.css
+++ b/staticfiles/css/menu.css
@@ -14,8 +14,18 @@ header {
     background-color:white;
     /*padding: 10px;*/
     transition: all 0.5s;
+    display: block;
+    padding: 0px 0px 0px 0px;
 }
-
+.logo {
+    width: 90px;
+    margin:auto;
+    display: block;
+    overflow: hidden;
+    padding: 0px 0px 0px 0px;
+    
+    
+}
 
 #principal {
     width: 100%;
@@ -24,10 +34,17 @@ header {
     background-color:white;
 }
 
+
 footer {
     width: 100%;
-    height: 100px;
+    height: 80px;
     background-color:white;
+}
+
+.logo_footer {
+    width:80px;
+    margin:auto;
+    display: block;
 }
 
 nav {
@@ -52,11 +69,7 @@ nav > ul > li > a {
     text-decoration: none;
 }
 
-.logo {
-    width: 190px;
-    margin:auto;
-    display: block;
-}
+
 
 
 .contenedor_menu {
@@ -77,7 +90,7 @@ nav > ul > li > a {
     margin-top: 10px;
     margin-left:10px;
     overflow: hidden;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 5px 15px 15px 5px;
 }
 
 .cartaMenu > img {
@@ -121,11 +134,6 @@ nav > ul > li > a {
 }
 
 
-.logo_footer {
-    width:300px;
-    margin:auto;
-    display: block;
-}
 .cartaMenu > td{
     font-weight:  bolder;
 }
