--- a/app/templates/app/cocina/tablero/indexTablero.html
+++ b/app/templates/app/cocina/tablero/indexTablero.html
@@ -21,7 +21,7 @@
         <th scope="col">Mesa</th>
         <th scope="col">Hora Inicio</th>
         <th scope="col">Estado</th>
-        <th scope="col">Acciones</th>
+        <!-- <th scope="col">Acciones</th> -->
       </tr>
     </thead>
     <tbody>
@@ -41,9 +41,9 @@
                 {% endfor %}
               </select>
             </td>
-            <td class="p-1">
+            <!-- <td class="p-1">
               <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Detalle</i></a>
-            </td>
+            </td> -->
           </tr>
         {% endfor %}
       </tr>
