--- a/app/templates/app/dashboard.html
+++ b/app/templates/app/dashboard.html
@@ -179,7 +179,7 @@
 
     optionReserva = {
       title: {
-          text: 'Total Reservas Diarias'
+          text: 'Cantidad Reservas Diarias'
       },
       tooltip: {},
       legend: {
