--- a/app/templates/app/cocina/tablero/indexTablero.html
+++ b/app/templates/app/cocina/tablero/indexTablero.html
@@ -21,6 +21,7 @@
         <th scope="col">Mesa</th>
         <th scope="col">Hora Inicio</th>
         <th scope="col">Estado</th>
+        <th scope="col">Acciones</th>
         <!-- <th scope="col">Acciones</th> -->
       </tr>
     </thead>
@@ -41,9 +42,9 @@
                 {% endfor %}
               </select>
             </td>
-            <!-- <td class="p-1">
-              <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Detalle</i></a>
-            </td> -->
+            <td class="p-1">
+              <a href="{% url 'detalleComanda' oc.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Detalle</i></a>
+            </td>
           </tr>
         {% endfor %}
       </tr>
