[ADD] Cuadratura de caja

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -178,6 +178,10 @@
           <span>Finanzas</span>
         </a>
         <div class="dropdown-container">
+          <a class="nav-link" href="{% url 'indexAperturaCajasFinanzas' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Apertura Cajas</span>
+          </a>
           <a class="nav-link" href="{% url 'indexGestionCajaFinanzas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Gestion de Caja</span>
