--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -138,6 +138,10 @@
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Mesas</span>
           </a>
+          <a class="nav-link" href="{% url 'indexDisponibilidades' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Disponibilidad Reserva</span>
+          </a>
           <a class="nav-link" href="{% url 'indexPedidosProveedor' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Pedidos Proveedores</span>
